Generated tuple classes should be value classes when possible.